# FABulous

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .test_durations_fallback  CHANGELOG.md  FABulous.py  FABulous_class_diagram.md  FABulous_detailed_overview.md  LUT4AB.yaml  LUT4AB_full.yaml  LUT4AB_switch_matrix.yaml  LUT4AB_visualization  LUT4AB_visualization_clear  LUT4AB_visualization_detailed  README.md  converter.py  docker-image-dev  fabric_visualization  flake.nix  genIOBel_workflow.md  license-header  pyproject.toml  requirements.txt  ruff.toml  test  visualize_fabric.py  visualize_tile.py
docs/: Makefile  pyproject.toml  readme.md  requirements.txt
docs/source/: Building fabric.rst  Usage.rst  conf.py  development.rst  fabric_definition.rst  index.md  index.rst  publications.bib  references.rst
docs/source/FPGA-to-bitstream/: Nextpnr compilation.rst  Yosys compilation.rst
docs/source/FPGA_CAD-tools/: index.rst
docs/source/_ext/: generate_cli_docs.py  generate_configvar_docs.py  generate_gds_variable_docs.py
docs/source/_static/: custom.css
docs/source/_templates/: flow_variable.md.jinja
docs/source/_templates/autoapi/: index.rst
docs/source/_templates/autosummary/: module.rst
docs/source/developer_guide/: development.md
docs/source/getting_started/: codespaces.md  quickstart.md
docs/source/getting_started/installation/: docker.md  index.md  venv.md
docs/source/references/: FABulous.rst  index.rst
docs/source/simulation/: simulation.rst
docs/source/user_guide/: index.md  writing_a_plugin.md
docs/source/user_guide/building_doc/: building_fabric.md  fabric_gds.md  (+6 more)
(+931 files in other folders)
