[project]
name = "fabulous-docs"
version = "0.1.0"
description = "Documentation build environment for FABulous FPGA"
requires-python = ">=3.12"
dependencies = [
    # Sphinx core
    "Sphinx>=8.0.0",
    "docutils>=0.21.0",

    # Sphinx extensions
    "sphinx-copybutton>=0.5.0",
    "sphinx-prompt==1.9.0",
    "sphinxcontrib-bibtex>=2.6.0",

    # Theme
    "pydata-sphinx-theme>=0.15.0",

    # FABulous package is installed separately via make setup

    # Additional dependencies that FABulous might need
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "cmd2>=2",
    "bitarray>=3.3.0",
    "pydantic-settings>=2.10.1",
    "packaging>=25.0",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "sphinx-autobuild",  # For live reload during development
]
