[project]
name = "fabulous-docs"
version = "0.1.0"
description = "Documentation build environment for FABulous FPGA"
requires-python = ">=3.12"
dependencies = [
    # Sphinx core
    "Sphinx>=8.0.0",
    "docutils>=0.21.0",

    # Sphinx extensions
    "sphinx-copybutton>=0.5.0",
    "sphinx-prompt==1.9.0",
    "sphinxcontrib-bibtex>=2.6.0",

    # Theme
    "pydata-sphinx-theme>=0.15.0",

    # FABulous package is installed separately via make setup
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["sphinx-autobuild"]
